Created MENU section

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,78 @@
         </div>
       </div>
     </header>
+    <section class="menu page__menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__content">
+          <nav class="menu__nav">
+            <div class="menu__menu-icon">
+              <a href="#" class="icon icon--menu-close"></a>
+            </div>
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Галерея</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#about" class="menu__link">Про Нас</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#events" class="menu__link">Виставки та <br> події</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="menu__schedule">
+            <h3 class="menu__schedule-title">
+              Графік роботи
+            </h3>
+            <div class="menu__days-wrapper">
+              <ul class="menu__days">
+                <li class="menu__day">
+                  <span class="menu__day-bold">
+                    12:00 — 20:00
+                  </span>
+                  середа
+                </li>
+                <li class="menu__day">
+                  <span class="menu__day-bold">
+                    12:00 — 20:00
+                  </span>
+                  четвер
+                </li>
+                <li class="menu__day">
+                  <span class="menu__day-bold">
+                  12:00 — 20:00
+                  </span>
+                  п’ятниця
+                </li>
+                <li class="menu__day">
+                  <span class="menu__day-bold">
+                    11:00 — 19:00
+                  </span>
+                  субота
+                </li>
+                <li class="menu__day">
+                  <span class="menu__day-bold">
+                  11:00 — 19:00
+                  </span>
+                  неділя
+                </li>
+              </ul>
+              <p class="menu__day-info">
+                <span class="menu__day-bold">Вихідні:</span> понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <main>
       <section class="museum page__museum">
         <div class="museum__image">
