--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,13 @@
       href="./images/favicon.svg"
       type="image/x-icon"
       >
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer
+      >
+    </script>
   </head>
   <body class="page__body">
     <header class="page__section header">
