--- a/src/index.html
+++ b/src/index.html
@@ -145,6 +145,84 @@
           </div>
         </div>
       </section>
+
+      <section class="events" id="events">
+        <div class="events__container">
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="events__content">
+            <div class="events__item">
+              <div class="events__image">
+                <img
+                  class="events__img"
+                  src="./images/events/event1.png"
+                  alt="Пейзаж"
+                >
+              </div>
+              <div class="events__information exhibition">
+                <div class="exhibition__sup-wrapper">
+                  <h4 class="exhibition__suptitle">ВИСТАВКА</h4>
+                  <p class="exhibition__days">26.08-29.11.2019</p>
+                </div>
+                <h3 class="exhibition__title">
+                  Йду і повертаюсь
+                </h3>
+
+                <p class="exhibition__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <div class="events__item">
+              <div class="events__image">
+                <img
+                  class="events__img"
+                  src="./images/events/event2.png"
+                  alt="Дівчина і павич"
+                >
+              </div>
+              <div class="
+                events__information
+                exhibition">
+                <div class="exhibition__sup-wrapper">
+                  <h4 class="exhibition__suptitle">ВИСТАВКА</h4>
+                  <p class="exhibition__days">26.08-29.11.2019</p>
+                </div>
+                <h3 class="exhibition__title">
+                  І спогади і мрії
+                </h3>
+                <p class="exhibition__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__item events__item--last">
+          <div class="events__image events__image--last">
+            <img
+              class="events__img events__img--last"
+              src="./images/events/event3.png"
+              alt="Море"
+            >
+          </div>
+          <div class="
+            events__information
+            events__information--last
+            exhibition">
+            <div class="exhibition__last">
+              <div class="exhibition__sup-wrapper exhibition__sup-wrapper--last">
+                <h4 class="exhibition__suptitle">ЛЕКЦІЯ</h4>
+                <p class="exhibition__days">26/08/2019 - 11:00</p>
+              </div>
+              <h3 class="exhibition__title exhibition__title--last">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
