--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,536 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en ua" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>NAMU</title>
+    <script src="./scripts/main.js"></script>
+    <link 
+      rel="stylesheet" 
+      href="./styles/main.scss"
+    >
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" 
+      integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" 
+      crossorigin="anonymous" 
+      referrerpolicy="no-referrer" 
+    >
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" 
+      integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" 
+      crossorigin="anonymous" 
+      referrerpolicy="no-referrer" 
+    >
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script 
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" 
+      integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" 
+      crossorigin="anonymous" 
+      referrerpolicy="no-referrer"
+    >
+    </script>
+
+    <link 
+      rel="preconnect" 
+      href="https://fonts.googleapis.com"
+    >
+    <link 
+      rel="preconnect" 
+      href="https://fonts.gstatic.com" 
+    >
+    <link 
+      rel="icon" 
+      type="image/x-icon" 
+      href="./images/logo.svg"
+    >
+    <link 
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" 
+      rel="stylesheet"
+    >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page-body">
+    <header class="header">
+      <div class="
+        container
+        container--no-paddings
+        grid
+        grid--desktop"
+      >      
+        <a href="#nav" class="header__menu-opener"></a>
+        <div class="
+          grid__item--tablet-4-4
+          grid__item--desktop-6-6"
+        > 
+          <img
+            class="header__image"
+            src="./images/header.png"
+            alt="header image"
+          >
+        </div>
+        <div class="
+          header__logo
+          grid__item--tablet-4-5
+          grid__item--desktop-6-7"
+        >
+          <a
+            class="logo"
+            href="#"> 
+            NA <br> MU  
+          </a>
+        </div>
+      </div>
+      <div class="
+        container 
+        grid 
+        grid--desktop"
+      >
+        <h1 class="
+            header__title
+            grid__item--tablet-1-3
+            grid__item--desktop-1-5"
+        >
+            ХУДОЖНІЙ <br> МУЗЕЙ
+        </h1>      
+        <div class="
+          header__button
+          grid__item--tablet-1-3 
+          grid__item--desktop-3-5"
+        >
+          <div class="header__button--container">
+            <a 
+              href="#tickets"
+              class="header__button-link"
+            >
+              КВИТКИ
+            </a>
+          </div>
+        </div>
+        <div class="header__events">
+          ПОДІЇ
+        </div>
+      </div>
+    </header>
+    <nav 
+      id="nav"
+      class=" page__nav nav"
+    >    
+      <div class="nav__container">
+        <div class="nav__list">
+          <div class="nav__about"> 
+            <a href="#" class="nav__closer"></a>
+            <div class="nav__item">
+              <a 
+                href="#gallery"
+                class="nav__item-text"
+              >
+                  Галерея
+              </a>
+              <a 
+                href="#events"
+                class="nav__item-text"
+              >
+                Виставки та <br> події
+              </a>
+            </div>
+            <div class="nav__item">
+              <a 
+                href="#about"
+                class="nav__item-text"
+              >
+                Про Нас
+              </a>
+              <a 
+                href="#about" 
+                class="nav__item-text"
+              >
+                Контакти
+              </a>
+            </div>
+          </div>
+          <div class="nav__line">
+          </div>
+          <div>
+            <div class="nav__work-shedule">       
+              <p class="nav__work-shedule--text">
+                Графік роботи
+              </p>
+              <div class="nav__work-shedule--items">  
+                <div class="nav__work-shedule--text"> 
+                  <strong>12:00 — 20:00</strong> середа<br> 
+                  <strong>12:00 — 20:00</strong> четвер<br>
+                  <strong>12:00 — 20:00</strong> п’ятниця<br>
+                  <strong>11:00 — 19:00</strong> субота<br>
+                  <strong>11:00 — 19:00</strong> неділя<br>
+                </div>    
+                <div class="nav__work-shedule--text">
+                  <strong>Вихідні:</strong> понеділок, вівторок<br>
+                    Каса припиняє роботу за <br> 1 годину до закриття музею
+                </div> 
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <menu class="menu">
+      <div 
+        id="events"
+        class="container"
+      >
+        <h1 class="menu__header">
+          Актуальні події
+        </h1>
+        <section class="
+          menu__section 
+          grid 
+          grid--desktop"
+        >
+          <div class="
+            grid__item 
+            grid__item--tablet-1-6 
+            grid__item--desktop-1-7"
+          >
+            <img
+              src="./images/picture1.png"
+              alt="picture"
+              class="menu__image"
+            >
+          </div>
+          <div class="
+            grid__item 
+            grid__item--tablet-1-4 
+            grid__item--desktop-9-12"
+          >         
+            <div class="block__info"> 
+              <div class="block__info-event">
+                ВИСТАВКА
+              </div>
+              <div class="block__info-date">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <h3 class="block__info-header">
+              Йду і повертаюсь
+            </h3>
+            <div class="block__info-text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </div>
+          </div>      
+        </section>    
+        <section class="
+          menu__section 
+          grid 
+          grid--desktop"
+        >
+          <div class="
+            grid__item--tablet-1-6 
+            grid__item--desktop-1-7"
+          >
+            <img
+              src="./images/picture2.png"
+              alt="picture"
+              class="menu__image"
+            >
+          </div>
+          <div class="
+            grid__item--tablet-1-4 
+            grid__item--desktop-9-12"
+          >
+            <div class="block__info"> 
+              <div class="block__info-event">
+                ВИСТАВКА
+              </div>
+              <div class="block__info-date">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <h3 class="block__info-header">
+              І спогади і мрії
+            </h3>
+            <div class="block__info-text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>          
+          </div> 
+        </section>
+      </div>
+      <section class="
+        menu__section-lecture 
+        container  
+        container--no-paddings"
+      >
+        <div class="
+          grid 
+          grid--desktop"
+        >
+          <img
+            src="./images/picture3.png"
+            alt="picture"
+            class="
+              lecture__image 
+              grid__item 
+              grid__item--tablet-1-6
+              grid__item--desktop-1-12"
+          >
+          <div class="
+            lecture 
+            grid__item 
+            grid__item--tablet-1-6
+            grid__item--desktop-4-8"
+          > 
+            <div class="lecture__info">
+              <div class="lecture__info-top">
+                <p class="block__info-event">
+                  ЛЕКЦІЯ
+                </p>
+                <p class="block__info-date">
+                  26/08/2019 - 11:00
+                </p>
+              </div>        
+              <h3 class="lecture__info-header">
+                Від класицизму до романтизму
+              </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="gallery container">  
+        <div class="gallery__content">
+          <h1 class="menu__header"> Галерея </h1>        
+          <div class="gallery__images">
+            <div class="gallery__images-section">
+              <img
+                alt="gallery image"
+                class="gallery__image gallery__image--1"
+                src="./images/picture5.png"
+              >
+              <img 
+                alt="gallery image"
+                class="gallery__image gallery__image--2"
+                src="./images/picture6.png"
+              >
+            </div>
+            <div class="gallery__images-section">
+              <img
+                alt="gallery image"
+                class="gallery__image gallery__image--3"
+                src="./images/picture7.png"
+              >
+              <img 
+                alt="gallery image"
+                class="gallery__image gallery__image--4"
+                src="./images/picture8.png"
+              >
+            </div>
+          </div>
+        </div>     
+           </div>
+        <div class="content container">
+          <h1 class="menu__header"> Галерея </h1>
+          <div class="slider fade">
+            <div>
+              <div class="slider__img--1 slider__wrapper">
+              </div>
+            </div>
+            <div>
+              <div class="slider__img--2 slider__wrapper">
+              </div>
+            </div>
+            <div>
+              <div class="slider__img--3 slider__wrapper">
+              </div>
+            </div>
+            <div>
+              <div class="slider__img--4 slider__wrapper">
+              </div>
+            </div>
+          </div>
+        </div>   
+      </section>   
+      <script type="text/javascript">
+        $(".fade").slick({
+        dots: true,
+        infinite: true,
+        speed: 500,
+        fade: true,
+        slide: "div",
+        cssEase: "linear"
+        });
+      </script>
+      <section class="subscription container">
+        <div class="subscription__container">
+          <div class="subscription__content">
+            <h2 class="subscription__title">
+              Підписка
+            </h2>
+            <div class="subscription__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </div>
+          </div>
+          <form class="subscription__form">
+            <label for="email" class="info__label">
+              <input
+                name="email"
+                type="email"
+                placeholder="E-mail"
+                class="subscription__input"
+                required=""
+              >
+            </label>
+            <button 
+              class="subscription__button"
+              type="submit"
+            >
+            </button>
+          </form>
+        </div>
+      </section>
+    </menu>
+    <footer class="footer container">   
+      <div class="footer__content">
+        <div class="grid">
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-1-1
+            grid__item--desktop-1-1"
+          >
+            <div class="footer__links">
+              <img
+                alt="footer logo"
+                src="./images/logo.svg"
+                class="footer__logo"
+              >
+              <div class="footer__social">
+                <a 
+                  href="#facebook" 
+                  id="logo" 
+                  class="footer__facebook"
+                >
+                  <img
+                    alt="facebook logo"
+                    src="./images/Facebook.svg"
+                  >
+                </a>
+                <a 
+                    href="#insta" 
+                    class="footer__insta"
+                >
+                  <img
+                    alt="insta logo"
+                    src="./images/insta-logo.svg"
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="
+            footer__work-shedule
+            grid__item--mobile-1-1
+            grid__item--tablet-2-3
+            grid__item--desktop-3-4"
+          >
+            <p> 
+              Графік роботи 
+            </p> 
+            <br>
+            <strong>12:00 — 20:00</strong> середа<br> 
+            <strong>12:00 — 20:00</strong> четвер<br>
+            <strong>12:00 — 20:00</strong> п’ятниця<br>
+            <strong>11:00 — 19:00</strong> субота<br>
+            <strong>11:00 — 19:00</strong> неділя<br>
+            <br>
+            <strong>Вихідні:</strong> понеділок, <br> вівторок<br>
+              Каса припиняє роботу за 1 годину до закриття музею
+          </div>
+          <div 
+            id="about"            
+            class="
+              footer__contacts
+              grid__item--mobile-2-2
+              grid__item--tablet-4-5
+              grid__item--desktop-5-6"
+            >
+            <p>
+              Контакти:
+            </p>
+            <br>
+            <a 
+              class="footer__contacts--addresses" 
+              href="http://goo.gl/maps/BCXVj9VrKofdFYz89" 
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a><br>
+            <a 
+              class="footer__contacts--addresses"
+              href="tel:+38 (044) 2781357"
+            >
+              тел.  +38 (044) 278-13-57 
+            </a><br>
+            <a 
+              class="footer__contacts--addresses"
+              href="tel:+38 (044) 2781357"
+            >
+              факс +38 (044) 278-74-54
+            </a><br>
+            <a href="mailto:info@namu.kiev.ua" class="footer__contacts--addresses">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+          <div class="
+            footer__line
+            grid__item--mobile-1-2
+            grid__item--tablet-2-5
+            grid__item--desktop-7-7"
+          >
+          </div>
+          <div class="
+            grid__item--mobile-1-1
+            grid__item--tablet-2-3
+            grid__item--desktop-8-9"
+          >
+            <div  class="footer__info-item">
+              <a class="footer__info-text" href="#gallery">Галерея</a>
+            </div>
+            <div  class="footer__info-item"> 
+              <a class="footer__info-text" href="#events">Виставки та події</a>
+            </div>
+          </div>
+          <div class="  
+            grid__item--mobile-2-2
+            grid__item--tablet-4-4
+            grid__item--desktop-10-11"
+          >
+            <div  class="footer__info-item">
+              <a class="footer__info-text" href="#about">Про Нас</a>
+            </div>
+            <div  class="footer__info-item"> 
+              <a class="footer__info-text" href="#about">Контакти</a>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+      <div class="footer__bottom">
+        <div class="footer__bottom-text">
+          Designed by Zhyriada Marina
+        </div>
+        <div class="footer__bottom-text">
+          Copyright © 2022. All Rights Reserved.
+        </div>
+      </div> 
+      <div class="container arrow__up">
+        <a 
+          href="#"
+        >
+          <img 
+            alt="image arrow"
+            src="./images/arrow-up.svg"
+          >
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
