--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,7 @@
               grid__item--desktop-1-4"
             >
               <a class="menu__link footer__link--fb"
-                href="https://facebook.com"
+                href="https://facebook.com" target="_blank"
               >
                 <svg width="12" height="24"
                   viewBox="0 0 12 24" fill="none"
@@ -379,7 +379,9 @@
                 </svg>
               </a>
 
-              <a href="https://instagram.com" class="menu__link">
+              <a href="https://instagram.com"
+                class="menu__link" target="_blank"
+              >
                 <svg width="24" height="24"
                   viewBox="0 0 24 24" fill="none"
                   xmlns="http://www.w3.org/2000/svg"
@@ -438,7 +440,9 @@
               grid__item--tablet-4-5
               grid__item--desktop-5-6
             ">
-              <a href="https://goo.gl/maps/YHuxGoWJAW41Bg416" class="menu__link footer__link">
+              <a href="https://goo.gl/maps/YHuxGoWJAW41Bg416" class="menu__link footer__link"
+                target="_blank"
+              >
                 вул. М. Грушевського, 6; Київ, 01001
               </a> <br>
 
