--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,20 @@
   </head>
   <body class="page__body">
     <heder class="header" id="home">
-      <a href="#menu" class="header__menu">
-        <svg width="18" height="12"
-        viewBox="0 0 18 12" fill="none"
-        xmlns="http://www.w3.org/2000/svg"
+      <a
+        class="header__menu"
+        href="#menu"
+      >
+        <svg
+          width="18"
+          height="12"
+          viewBox="0 0 18 12"
+          xmlns="http://www.w3.org/2000/svg"
         >
-          <path d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z" fill="#0F0E08">
+          <path
+            d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z"
+            fill="#0F0E08"
+          >
         </svg>
       </a>
 
@@ -44,7 +52,9 @@
           grid__item--desktop-1-5
         ">
           <h1 class="header__main-title">ХУДОЖНІЙ МУЗЕЙ</h1>
-          <a class="header__main-tickets"
+
+          <a
+            class="header__main-tickets"
             href="#events"
           >
             <div class="header__main-tickets--box">
@@ -52,8 +62,10 @@
             </div>
 
             <div class="header__main-tickets--arrow">
-              <svg width="8" height="12"
-                viewBox="0 0 8 12" fill="none"
+              <svg
+                width="8"
+                height="12"
+                viewBox="0 0 8 12"
                 xmlns="http://www.w3.org/2000/svg"
               >
                 <path d="M0.589996 10.59L5.17 6L0.589996 1.41L2 0L8 6L2 12L0.589996 10.59Z" fill="#D7DDE3">
@@ -68,13 +80,15 @@
 
     <nav class="menu" id="menu">
       <a href="#" class="menu__cross">
-        <svg width="14" height="14"
-          viewBox="0 0 14 14" fill="none"
+        <svg
+          width="14"
+          height="14"
+          viewBox="0 0 14 14"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.00023 5.58599L11.9502 0.635986L13.3642 2.04999L8.41423 6.99999L13.3642 11.95L11.9502 13.364L7.00023 8.41399L2.05023 13.364L0.63623 11.95L5.58623 6.99999L0.63623 2.04999L2.05023 0.635986L7.00023 5.58599Z" fill="white">
         </svg>
       </a>
-
+      
       <div class="container menu__container">
         <ul class="grid menu__list">
           <li class="menu__item--gallery
@@ -192,7 +206,6 @@
             <h3 class="events__text-title">Йду і повертаюсь</h3>
 
             <p class="events__text-p">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
-
           </div>
         </div>
 
@@ -214,7 +227,6 @@
             <h3 class="events__text-title">І спогади і мрії</h3>
 
             <p class="events__text-p">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
-
           </div>
         </div>
       </div>
@@ -244,6 +256,7 @@
             gallery__slider-container--photo-1"
             id="gallery1"
             ></div>
+
             <div class="
             gallery__slider-container--photo
             gallery__slider-container--photo-2"
@@ -266,16 +279,23 @@
       </div>
 
       <div class="gallery__slider-buttons">
-        <a href="#gallery1"
+        <a
+          href="#gallery1"
           class="gallery__slider-buttons--dot dot1"
         ></a>
-        <a href="#gallery2"
+
+        <a
+          href="#gallery2"
           class="gallery__slider-buttons--dot dot2"
         ></a>
-        <a href="#gallery3"
+
+        <a
+          href="#gallery3"
           class="gallery__slider-buttons--dot dot3"
         ></a>
-        <a href="#gallery4"
+
+        <a
+          href="#gallery4"
           class="gallery__slider-buttons--dot dot4"
         ></a>
       </div>
@@ -353,8 +373,9 @@
               grid__item--tablet-1-1
               grid__item--desktop-1-1
            ">
-              <a class="logo header__logo footer__logo"
-              href="#home"
+              <a
+                class="logo header__logo footer__logo"
+                href="#home"
               >
                 na<br>mu
               </a>
@@ -366,27 +387,35 @@
               grid__item--tablet-1-6
               grid__item--desktop-1-4"
             >
-              <a class="menu__link footer__link--fb"
-                href="https://facebook.com" target="_blank"
+              <a
+                class="menu__link footer__link--fb"
+                href="https://facebook.com"
+                target="_blank"
               >
-                <svg width="12" height="24"
-                  viewBox="0 0 12 24" fill="none"
+                <svg
+                  width="12"
+                  height="24"
+                  viewBox="0 0 12 24"
                   xmlns="http://www.w3.org/2000/svg"
                 >
-                  <path d="M2.80699 4.64899C2.80699 5.2538 2.80699 7.9533 2.80699 7.9533H0.389923V11.9938H2.80699V24.0009H7.77217V11.9942H11.104C11.104 11.9942 11.4161 10.0568 11.5673 7.93841C11.1337 7.93841 7.79094 7.93841 7.79094 7.93841C7.79094 7.93841 7.79094 5.58776 7.79094 5.17573C7.79094 4.76282 8.3323 4.2074 8.86736 4.2074C9.40141 4.2074 10.5286 4.2074 11.5726 4.2074C11.5726 3.65727 11.5726 1.75647 11.5726 0.000976577C10.1789 0.000976577 8.59331 0.000976577 7.8944 0.000976577C2.68426 0.000697581 2.80699 4.04524 2.80699 4.64899Z"
-                  fill="black"
+                  <path
+                    d="M2.80699 4.64899C2.80699 5.2538 2.80699 7.9533 2.80699 7.9533H0.389923V11.9938H2.80699V24.0009H7.77217V11.9942H11.104C11.104 11.9942 11.4161 10.0568 11.5673 7.93841C11.1337 7.93841 7.79094 7.93841 7.79094 7.93841C7.79094 7.93841 7.79094 5.58776 7.79094 5.17573C7.79094 4.76282 8.3323 4.2074 8.86736 4.2074C9.40141 4.2074 10.5286 4.2074 11.5726 4.2074C11.5726 3.65727 11.5726 1.75647 11.5726 0.000976577C10.1789 0.000976577 8.59331 0.000976577 7.8944 0.000976577C2.68426 0.000697581 2.80699 4.04524 2.80699 4.64899Z"
+                    fill="black"
                   >
                 </svg>
               </a>
 
-              <a href="https://instagram.com"
-                class="menu__link" target="_blank"
+              <a
+                class="menu__link"
+                target="_blank"
+                href="https://instagram.com"
               >
                 <svg width="24" height="24"
-                  viewBox="0 0 24 24" fill="none"
+                  viewBox="0 0 24 24"
                   xmlns="http://www.w3.org/2000/svg"
                 >
-                  <path d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z"
+                  <path
+                    d="M17.5034 0H6.49657C2.9143 0 0 2.9143 0 6.49657V17.5036C0 21.0857 2.9143 24 6.49657 24H17.5036C21.0857 24 24 21.0857 24 17.5036V6.49657C24 2.9143 21.0857 0 17.5034 0V0ZM12 18.5623C8.38145 18.5623 5.43767 15.6185 5.43767 12C5.43767 8.38145 8.38145 5.43767 12 5.43767C15.6185 5.43767 18.5623 8.38145 18.5623 12C18.5623 15.6185 15.6185 18.5623 12 18.5623ZM18.7192 6.98528C17.6499 6.98528 16.7801 6.11553 16.7801 5.04619C16.7801 3.97686 17.6499 3.10693 18.7192 3.10693C19.7885 3.10693 20.6585 3.97686 20.6585 5.04619C20.6585 6.11553 19.7885 6.98528 18.7192 6.98528Z"
                     fill="black"
                   >
                 </svg>
@@ -432,15 +461,14 @@
               <span class="bold">11:00 — 19:00</span> неділя<br>
             </li>
 
-
-
             <li class="footer__item--info-adress
               menu__item
               grid__item--mobile-2-2
               grid__item--tablet-4-5
               grid__item--desktop-5-6
             ">
-              <a href="https://goo.gl/maps/YHuxGoWJAW41Bg416" class="menu__link footer__link"
+              <a
+                href="https://goo.gl/maps/YHuxGoWJAW41Bg416" class="menu__link footer__link"
                 target="_blank"
               >
                 вул. М. Грушевського, 6; Київ, 01001
@@ -475,12 +503,16 @@
             <li class="footer__item--gotop
               grid__item--mobile-1-2
             ">
-              <a class="footer__gotop"
+              <a
+                class="footer__gotop"
                 href="#home"
               >
-                <svg width="10" height="12"
-                  viewBox="0 0 10 12" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                <svg
+                  width="10"
+                  height="12"
+                  viewBox="0 0 10 12"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
                   <path d="M5 0L0 5L0.705 5.705L4.5 1.915V12H5.5V1.915L9.295 5.705L10 5L5 0Z"
                     fill="#1A5A4C"
                   >
@@ -554,6 +586,7 @@
       </nav>
       <div class="container footer__signature">
         <h4 class="container footer__signature--by">Designed by Zhyriada Marina</h4>
+
         <h4 class="container footer__signature--copyright">Copyright © 2019. All Rights Reserved.</h4>
       </div>
     </footer>
