Created slider in Gallety section

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header page__header">
+    <header class="header page__header" hidden>
       <div class="header__container">
         <div class="header__content">
           <div class="header__menu">
@@ -114,7 +114,7 @@
       </div>
     </section>
     <main>
-      <section class="museum page__museum">
+      <section class="museum page__museum" hidden>
         <div class="museum__image">
           <img
             src="./images/background/header.png"
@@ -146,7 +146,10 @@
         </div>
       </section>
 
-      <section class="events" id="events">
+      <section
+        class="events"
+        id="events"
+        hidden>
         <div class="events__container">
           <h2 class="events__title">Актуальні події</h2>
           <div class="events__content">
@@ -219,6 +222,51 @@
               <h3 class="exhibition__title exhibition__title--last">
                 Від класицизму до романтизму
               </h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="gallery__container">
+          <div class="gallery__content">
+            <h2 class="gallery__title">Галерея</h2>
+
+            <div class="gallery__slider slider">
+              <ul class="slider__items">
+                <li class="slider__item">
+                  <img
+                    class="slider__image"
+                    src="./images/gallery/gallery1.png"
+                    alt="Жінки в традиційних нарядах"
+                  >
+                </li>
+                <li class="slider__item">
+                  <img
+                    class="slider__image"
+                    src="./images/gallery/gallery2.png"
+                    alt="Село взимку"
+                  >
+                </li>
+                <li class="slider__item">
+                  <img
+                    class="slider__image"
+                    src="./images/gallery/gallery3.png" alt="Прогулянка парком"
+                  >
+                </li>
+                <li class="slider__item">
+                  <img
+                    class="slider__image"
+                    src="./images/gallery/gallery4.png" alt="Відпочинок на морі"
+                  >
+                </li>
+              </ul>
+              <div class="slider__dots">
+                <div class="slider__dot slider__dot--active"></div>
+                <div class="slider__dot"></div>
+                <div class="slider__dot"></div>
+                <div class="slider__dot"></div>
+              </div>
             </div>
           </div>
         </div>
