Created SUBSCRIPTION section

--- a/src/index.html
+++ b/src/index.html
@@ -227,7 +227,9 @@
         </div>
       </section>
 
-      <section class="gallery" id="gallery">
+      <section
+        class="gallery"
+        id="gallery" hidden>
         <div class="gallery__container">
           <div class="gallery__content">
             <h2 class="gallery__title">Галерея</h2>
@@ -262,13 +264,39 @@
                 </li>
               </ul>
               <div class="slider__dots">
-                <div class="slider__dot slider__dot--active"></div>
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
-                <div class="slider__dot"></div>
+                <span class="slider__dot slider__dot--active"></span>
+                <span class="slider__dot"></span>
+                <span class="slider__dot"></span>
+                <span class="slider__dot"></span>
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="subscription">
+        <div class="subscription__content">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+          <form class="subscription__form" id="form">
+            <input
+              type="email"
+              name="email"
+              class="subscription__field"
+              placeholder="Email"
+              autocomplete="off"
+              required
+            >
+            <button
+              type="submit"
+              class="subscription__btn">
+              <img
+                src="./images/icons/arrow-black.svg"
+                alt="Кнопка для відправлення форми"
+                class="subscription__img">
+            </button>
+          </form>
         </div>
       </section>
     </main>
