--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,247 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Devanagari:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <div class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__nav">
+            <a href="#menu" class="header__menu"></a>
+            <a href="#" class="header__logo logo">
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+
+          <div class="header__place">
+            <div class="header__place1">
+              <h1 class="header__title">
+                ХУДОЖНІЙ
+                <br>
+                МУЗЕЙ
+              </h1>
+            </div>
+
+            <div class="header__place2">
+              <div class="button">
+                <div class="button__title">КВИТКИ</div>
+                <a href="#" class="button__link"></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="header__img"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__section1">
+            <div class="menu__box">
+              <a href="#" class="menu__cross"></a>
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Галерея</a>
+                </li>
+                
+                <li class="menu__item">
+                  <a href="#about-us" class="menu__link">Про Нас</a>
+                </li>
+
+                <li class="menu__item">
+                  <a href="#actions" class="menu__link">
+                    Виставки та
+                    <br>
+                    події
+                  </a>
+                </li>
+
+                <li class="menu__item">
+                  <a href="#contacts" class="menu__link">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="menu__section2">
+          <div class="menu__title">
+            Графік роботи
+          </div>
+          <div class="menu__column">
+            <div class="menu__column1">
+              12:00 — 20:00 <span class="menu__days">середа</span> 
+              <br>
+              12:00 — 20:00 <span class="menu__days">четвер</span>
+              <br>
+              12:00 — 20:00 <span class="menu__days">п’ятниця</span>
+              <br>
+              11:00 — 19:00 <span class="menu__days">субота</span>
+              <br>
+              11:00 — 19:00 <span class="menu__days">неділя</span>
+            </div>
+            <div class="menu__column2">
+              Вихідні: 
+              <span class="menu__days">понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <main class="main">
+      <section class="page__section actual">
+        <div class="container">
+          <div class="actual__content">
+            <h2 class="page__title">
+              Актуальні
+              події
+            </h2>
+            <div class="card">
+              <div class="card__img"></div>
+              <div class="card__container">
+                <div class="card__under-img">
+                  <h4 class="card__exhibition">ВИСТАВКА</h4>
+
+                  <h4 class="card__date">26.08-29.11.2019</h4>
+                </div>
+  
+                <h3 class="card__title">Йду і повертаюсь <span class="card__cub"></span>
+                </h3>
+  
+                <p class="card__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card__img card__img--2"></div>
+              <div class="card__container">
+                <div class="card__under-img">
+                  <h4 class="card__exhibition">ВИСТАВКА</h4>
+  
+                  <h4 class="card__date">26.08-29.11.2019</h4>
+                </div>
+  
+                <h3 class="card__title"> І спогади і мрії <span class="card__cub"></span>
+                </h3>
+  
+                <p class="card__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="actual__container">
+          <div class="actual__img"></div>
+          <div class="actual__from-to from-to">
+            <div class="from-to__top">
+              <p class="from-to__first">ЛЕКЦІЯ</p>
+              <p class="from-to__second">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+            <h3 class="from-to__title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section gallery">
+        <div class="container">
+          <h2 class="page__title"></h2>
+          <div class="slider">
+            <div class="slider__line">
+              <div class="slider__slide">
+                <img
+                  src="./images/slider/1.png"
+                  alt="1"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="slider__slide">
+                <img
+                  src="./images/slider/2.png"
+                  alt="2"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="slider__slide">
+                <img
+                  src="./images/slider/3.png"
+                  alt="3"
+                  class="slider__img"
+                >
+              </div>
+
+              <div class="slider__slide">
+                <img
+                  src="./images/slider/4.png"
+                  alt="4"
+                  class="slider__img"
+                >
+              </div>
+
+              <input
+                type="radio"
+                class="slider__input"
+                id="r1"
+                checked
+                name="r"
+              >
+              <input
+                type="radio"
+                class="slider__input"
+                id="r2"
+                name="r"
+              >
+              <input
+                type="radio"
+                class="slider__input"
+                id="r3"
+                name="r"
+              >
+              <input
+                type="radio"
+                class="slider__input"
+                id="r4"
+                name="r"
+              >
+            </div>
+          </div>
+
+          <div class="slider__buttons">
+            <label for="r1" class="slider__button"></label>
+            <label for="r2" class="slider__button"></label>
+            <label for="r3" class="slider__button"></label>
+            <label for="r4" class="slider__button"></label>
+          </div>
+        </div>
+      </section>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
