--- a/src/index.html
+++ b/src/index.html
@@ -364,8 +364,18 @@
                 mu
               </a>
               <div class="footer__socials">
-                <a href="https://facebook.com" class="icon icon--facebook"></a>
-                <a href="https://instagram.com" class="icon icon--instagram"></a>
+                <a
+                  href="https://facebook.com"
+                  class="icon icon--facebook"
+                  target="_blank"
+                  >
+                </a>
+                <a
+                  href="https://instagram.com"
+                  class="icon icon--instagram"
+                  target="_blank"
+                  >
+                </a>
               </div>
             </div>
           </div>
