--- a/src/index.html
+++ b/src/index.html
@@ -473,6 +473,7 @@
                 menu__item
                 menu__item--regular
                 menu__item--footer"
+              target="_blank"
                 >
                 вул. М. Грушевського, 6; Київ, 01001
             </a>
