--- a/src/index.html
+++ b/src/index.html
@@ -166,8 +166,8 @@
                   <strong>11:00 — 19:00</strong> неділя<br>
                 </div>    
                 <div class="nav__work-shedule--text">
-                  <strong>Вихідні:</strong> понеділок, вівторок<br>
-                    Каса припиняє роботу за <br> 1 годину до закриття музею
+                  <strong>Вихідні:</strong> понеділок, вівторок <br>
+                    Каса припиняє роботу за  1 годину до закриття музею
                 </div> 
               </div>
             </div>
@@ -212,9 +212,16 @@
                 26.08-29.11.2019
               </div>
             </div>
-            <h3 class="block__info-header">
-              Йду і повертаюсь
-            </h3>
+            <div class="block__info-header">
+              <h3 class="block__info-header--text">
+                Йду і повертаюсь
+              </h3>
+              <img 
+                alt="orange square"
+                class="block__info-header--after"
+                src="./images/square.svg"
+              >
+            </div>
             <div class="block__info-text">
                 Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
             </div>
@@ -247,9 +254,16 @@
                 26.08-29.11.2019
               </div>
             </div>
-            <h3 class="block__info-header">
-              І спогади і мрії
-            </h3>
+            <div class="block__info-header">
+              <h3 class="block__info-header--text">
+                І спогади і мрії
+              </h3>
+              <img 
+                alt="orange square"
+                class="block__info-header--after"
+                src="./images/square.svg"
+              >
+            </div>
             <div class="block__info-text">
               Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
             </div>          
@@ -296,7 +310,10 @@
           </div>
         </div>
       </section>
-      <section class="gallery container">  
+      <section 
+        class="gallery container"
+        id="gallery"
+      >  
         <div class="gallery__content">
           <h1 class="menu__header"> Галерея </h1>        
           <div class="gallery__images">
@@ -359,7 +376,12 @@
         cssEase: "linear"
         });
       </script>
-      <section class="subscription container">
+      <section 
+        class="
+          subscription 
+          container 
+          container--no-paddings"
+        >
         <div class="subscription__container">
           <div class="subscription__content">
             <h2 class="subscription__title">
@@ -397,14 +419,19 @@
             grid__item--desktop-1-1"
           >
             <div class="footer__links">
-              <img
+              <a 
+                href="https://www.facebook.com/namu.museum/?locale=ru_RU" 
+                class="footer__logo--link"
+              >
+                <img
                 alt="footer logo"
                 src="./images/logo.svg"
                 class="footer__logo"
               >
+              </a>
               <div class="footer__social">
                 <a 
-                  href="#facebook" 
+                  href="https://www.facebook.com/namu.museum/?locale=ru_RU" 
                   id="logo" 
                   class="footer__facebook"
                 >
@@ -414,7 +441,7 @@
                   >
                 </a>
                 <a 
-                    href="#insta" 
+                    href="https://www.instagram.com/namu.museum/" 
                     class="footer__insta"
                 >
                   <img
