--- a/src/index.html
+++ b/src/index.html
@@ -117,58 +117,60 @@
       id="nav"
       class=" page__nav nav"
     >    
-      <div class="nav__container">
-        <div class="nav__list">
-          <div class="nav__about"> 
-            <a href="#" class="nav__closer"></a>
-            <div class="nav__item">
-              <a 
-                href="#gallery"
-                class="nav__item-text"
-              >
-                  Галерея
-              </a>
-              <a 
-                href="#events"
-                class="nav__item-text"
-              >
-                Виставки та <br> події
-              </a>
+      <div class="nav__green">
+        <div class="nav__container">
+          <div class="nav__list">
+            <div class="nav__about"> 
+              <a href="#" class="nav__closer"></a>
+              <div class="nav__item">
+                <a 
+                  href="#gallery"
+                  class="nav__item-text"
+                >
+                    Галерея
+                </a>
+                <a 
+                  href="#events"
+                  class="nav__item-text"
+                >
+                  Виставки та <br> події
+                </a>
+              </div>
+              <div class="nav__item">
+                <a 
+                  href="#about"
+                  class="nav__item-text"
+                >
+                  Про Нас
+                </a>
+                <a 
+                  href="#about" 
+                  class="nav__item-text"
+                >
+                  Контакти
+                </a>
+              </div>
             </div>
-            <div class="nav__item">
-              <a 
-                href="#about"
-                class="nav__item-text"
-              >
-                Про Нас
-              </a>
-              <a 
-                href="#about" 
-                class="nav__item-text"
-              >
-                Контакти
-              </a>
+            <div class="nav__line">
             </div>
-          </div>
-          <div class="nav__line">
-          </div>
-          <div>
-            <div class="nav__work-shedule">       
-              <p class="nav__work-shedule--text">
-                Графік роботи
-              </p>
-              <div class="nav__work-shedule--items">  
-                <div class="nav__work-shedule--text"> 
-                  <strong>12:00 — 20:00</strong> середа<br> 
-                  <strong>12:00 — 20:00</strong> четвер<br>
-                  <strong>12:00 — 20:00</strong> п’ятниця<br>
-                  <strong>11:00 — 19:00</strong> субота<br>
-                  <strong>11:00 — 19:00</strong> неділя<br>
-                </div>    
-                <div class="nav__work-shedule--text">
-                  <strong>Вихідні:</strong> понеділок, вівторок <br>
-                    Каса припиняє роботу за  1 годину до закриття музею
-                </div> 
+            <div>
+              <div class="nav__work-shedule">       
+                <p class="nav__work-shedule--text">
+                  Графік роботи
+                </p>
+                <div class="nav__work-shedule--items">  
+                  <div class="nav__work-shedule--text"> 
+                    <strong>12:00 — 20:00</strong> середа<br> 
+                    <strong>12:00 — 20:00</strong> четвер<br>
+                    <strong>12:00 — 20:00</strong> п’ятниця<br>
+                    <strong>11:00 — 19:00</strong> субота<br>
+                    <strong>11:00 — 19:00</strong> неділя<br>
+                  </div>    
+                  <div class="nav__work-shedule--text">
+                    <strong>Вихідні:</strong> понеділок, вівторок <br>
+                      Каса припиняє роботу за  1 годину до закриття музею
+                  </div> 
+                </div>
               </div>
             </div>
           </div>
