Created CONTACTS section

--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,7 @@
         </div>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" hidden>
         <div class="subscription__content">
           <h2 class="subscription__title">Підписка</h2>
           <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
@@ -297,6 +297,115 @@
                 class="subscription__img">
             </button>
           </form>
+        </div>
+      </section>
+
+      <section class="contacts" id="contacts">
+        <div class="contacts__container">
+          <div class="contacts__content">
+            <div class="contacts__icons">
+              <div class="contacts__logo">
+                <a href="#">
+                  <img
+                    class="contacts__logo-image"
+                    src="./images/icons/logo.svg"
+                    alt="Logo"
+                  >
+                </a>
+              </div>
+              <div class="contacts__icon-wrapper">
+                <a
+                  class="contacts__icon contacts__icon--facebook"
+                  href="https://uk-ua.facebook.com/"
+                  target="_blank"
+                  rel="noopener"
+                  title="Facebook link"></a>
+                <a
+                  class="contacts__icon contacts__icon--instagram"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  rel="noopener"
+                  title="Instagram link"></a>
+              </div>
+            </div>
+
+            <div class="contacts__info-wrapper">
+              <div class="contacts__info">
+                <h3 class="contacts__info-title">
+                  Графік роботи
+                </h3>
+                <ul class="contacts__days">
+                  <li class="contacts__day">
+                    <span class="contacts__day-bold">
+                      12:00 — 20:00
+                    </span>
+                    середа
+                  </li>
+                  <li class="contacts__day">
+                    <span class="contacts__day-bold">
+                      12:00 — 20:00
+                    </span>
+                    четвер
+                  </li>
+                  <li class="contacts__day">
+                    <span class="contacts__day-bold">
+                    12:00 — 20:00
+                    </span>
+                    п’ятниця
+                  </li>
+                  <li class="contacts__day">
+                    <span class="contacts__day-bold">
+                    11:00 — 19:00
+                    </span>
+                    субота
+                  </li>
+                  <li class="contacts__day">
+                    <span class="contacts__day-bold">
+                    11:00 — 19:00
+                    </span>
+                    неділя
+                  </li>
+                </ul>
+                <p class="contacts__day-info">
+                  <span class="contacts__day-bold">Вихідні:</span> понеділок,вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+              <div class="contacts__info">
+                <h3 class="contacts__info-title">
+                  Контакти:
+                </h3>
+                <address class="contacts__address">
+                  вул. М. Грушевського, 6; Київ, 01001
+                  <br>
+                  тел. +38 (044) 278-13-57
+                  <br>
+                  факс +38 (044) 278-74-54
+                  <br>
+                  e-mail: info@namu.kiev.ua
+                </address>
+              </div>
+            </div>
+          </div>
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <a href="#gallery" class="contacts__link">Галерея</a>
+            </li>
+
+            <li class="contacts__item">
+              <a href="#about" class="contacts__link">Про Нас</a>
+            </li>
+
+            <li class="contacts__item">
+              <a href="#events" class="contacts__link">Виставки та події</a>
+            </li>
+
+            <li class="contacts__item">
+              <a href="#contacts" class="contacts__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
         </div>
       </section>
     </main>
