--- a/src/index.html
+++ b/src/index.html
@@ -38,11 +38,9 @@
           <h1 class="header__title page__title">
             художній музей
           </h1>
-          <button class="button">
-            <a href="#tickets" class="button__link">
-              квитки
-            </a>
-          </button>
+          <a href="#tickets" class="button button--ticket">
+            квитки
+          </a>
           <a href="#current-events" class="header__line">події</a>
         </div>
       </div>
@@ -312,7 +310,7 @@
       </div>
 
       </div>
-      <div class="subscription">
+      <div class="subscription" id="tickets">
         <div class="container">
           <div class="grid grid--not-phone">
             <div
@@ -472,7 +470,8 @@
               class="
                 menu__item
                 menu__item--regular
-                menu__item--footer"
+                menu__item--footer
+                menu__item--contacts"
               target="_blank"
                 >
                 вул. М. Грушевського, 6; Київ, 01001
@@ -482,7 +481,8 @@
               class="
                 menu__item
                 menu__item--regular
-                menu__item--footer"
+                menu__item--footer
+                menu__item--contacts"
               >
               тел. +38 (044) 278-13-57
             </a>
@@ -490,16 +490,19 @@
               class="
                   menu__item
                   menu__item--regular
-                  menu__item--footer"
+                  menu__item--footer
+                  menu__item--contacts"
               >
               факс +38 (044) 278-74-54
             </a>
             <a
-              href="email:info@namu.kiev.ua"
+              href="mailto:info@namu.kiev.ua"
+              type="e-mail"
               class="
                   menu__item
                   menu__item--regular
-                  menu__item--footer"
+                  menu__item--footer
+                  menu__item--contacts"
               >
               e-mail: info@namu.kiev.ua
             </a>
