--- a/src/index.html
+++ b/src/index.html
@@ -34,12 +34,11 @@
                МУЗЕЙ
             </h1>
             <div class="tickets grid__item--tablet-1-3 grid__item--desktop-3-5">
-              <a href="#" class="tickets__button button"
-                 target="_blank"
+              <a href="https://www.facebook.com/namu.museum" class="tickets__button button"
               >
                 <img
                   class="button__arrow"
-                  src="./images/batton-arrow.svg"
+                  src="./images/button-arrow.svg"
                   alt="arrow"
                 >
               </a>
@@ -257,10 +256,11 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
         <form
-           method="get"
+           action="/"
            class="subscription__form"
            id="form"
-           >
+           method="get"
+        >
           <input
              type="email"
              class="subscription__input"
@@ -268,9 +268,12 @@
              placeholder="E-mail"
              required
            >
-          <button class="button subscription__button">
+          <button
+             class="button subscription__button"
+             type="submit"
+          >
             <img
-               src="./images/batton-arrow.svg"
+               src="./images/button-arrow.svg"
                alt="arrow"
                class="button__arrow">
           </button>
