--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
-    <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
     <header class="page__section header">
@@ -415,5 +414,10 @@
         </div>
       </div>
     </footer>
+    <script
+       type="text/javascript"
+       src="scripts/main.js"
+       defer
+    ></script>
   </body>
 </html>
