--- a/src/index.html
+++ b/src/index.html
@@ -409,6 +409,13 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__container">
+        <p class="footer__text">Designed by Zhyriada Marina</p>
+        <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
