Updated Contact links

--- a/src/index.html
+++ b/src/index.html
@@ -377,13 +377,26 @@
                   Контакти:
                 </h3>
                 <address class="contacts__address">
-                  вул. М. Грушевського, 6; Київ, 01001
-                  <br>
-                  тел. +38 (044) 278-13-57
-                  <br>
-                  факс +38 (044) 278-74-54
-                  <br>
-                  e-mail: info@namu.kiev.ua
+                  <a
+                    href="https://goo.gl/maps/6Lb7gNhJkVmQ7qmR9" class="contacts__address-link"
+                    target="_blank">
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                  <a
+                    href="tel:+38 (044) 278-13-57"
+                    class="contacts__address-link">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                  <a
+                    href="tel:+38 (044) 278-74-54"
+                    class="contacts__address-link">
+                    факс +38 (044) 278-74-54
+                  </a>
+                  <a
+                    href="mailto:info@namu.kiev.ua"
+                    class="contacts__address-link">
+                    e-mail: info@namu.kiev.ua
+                  </a>
                 </address>
               </div>
             </div>
