--- a/src/index.html
+++ b/src/index.html
@@ -53,64 +53,54 @@
   </head>
   <body class="page-body">
     <header class="header">
-      <div class="
-        container
-        container--no-paddings
-        grid
-        grid--desktop"
-      >      
-        <a href="#nav" class="header__menu-opener"></a>
-        <div class="
-          grid__item--tablet-4-4
-          grid__item--desktop-6-6"
-        > 
-          <img
-            class="header__image"
-            src="./images/header.png"
-            alt="header image"
-          >
-        </div>
-        <div class="
-          header__logo
-          grid__item--tablet-4-5
-          grid__item--desktop-6-7"
-        >
+      <div class="container">
+        <div class="header__top-actions grid">
+          <a href="#nav" class="header__menu-opener"></a>
           <a
-            class="logo"
-            href="#"> 
+            target="_blank"
+            class="
+              grid__item--tablet-4-5
+              grid__item--desktop-7-7
+              logo"
+              href="https://www.facebook.com/namu.museum"
+            >
             NA <br> MU  
           </a>
+          <div class="header__image"></div>
         </div>
-      </div>
-      <div class="
-        container 
-        grid 
-        grid--desktop"
-      >
-        <h1 class="
+        <div class="header__left">
+          <div class="
+            grid 
+            grid--desktop"
+          >
+            <h1 class="
             header__title
             grid__item--tablet-1-3
             grid__item--desktop-1-5"
-        >
-            ХУДОЖНІЙ <br> МУЗЕЙ
-        </h1>      
-        <div class="
-          header__button
-          grid__item--tablet-1-3 
-          grid__item--desktop-3-5"
-        >
-          <div class="header__button--container">
-            <a 
-              href="#tickets"
-              class="header__button-link"
             >
-              КВИТКИ
-            </a>
-          </div>
+            ХУДОЖНІЙ <br> МУЗЕЙ
+            </h1>      
+            <div class="
+                header__button
+                grid__item--tablet-1-3
+                grid__item--desktop-3-5"
+            >
+              <div class="header__button--container">
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/namu.museum"
+                  class="header__button-link"
+                >
+                  КВИТКИ
+                </a>
+              </div>
+            </div>
+            <div class="header__events">
+              ПОДІЇ
+            </div>
+          </div>  
         </div>
-        <div class="header__events">
-          ПОДІЇ
-        </div>
+      </div>
       </div>
     </header>
     <nav 
@@ -191,7 +181,6 @@
           grid--desktop"
         >
           <div class="
-            grid__item 
             grid__item--tablet-1-6 
             grid__item--desktop-1-7"
           >
@@ -393,14 +382,19 @@
               Бути в курсі всіх актуальних подій та останніх новин.
             </div>
           </div>
-          <form class="subscription__form">
+          <form 
+            class="subscription__form"
+            id="form"
+            method="get"
+            action="#"
+          >
             <label for="email" class="info__label">
               <input
                 name="email"
                 type="email"
                 placeholder="E-mail"
                 class="subscription__input"
-                required=""
+                required
               >
             </label>
             <button 
@@ -422,6 +416,7 @@
           >
             <div class="footer__links">
               <a 
+                target="_blank"
                 href="https://www.facebook.com/namu.museum/?locale=ru_RU" 
                 class="footer__logo--link"
               >
@@ -433,6 +428,7 @@
               </a>
               <div class="footer__social">
                 <a 
+                  target="_blank"
                   href="https://www.facebook.com/namu.museum/?locale=ru_RU" 
                   id="logo" 
                   class="footer__facebook"
@@ -443,8 +439,9 @@
                   >
                 </a>
                 <a 
-                    href="https://www.instagram.com/namu.museum/" 
-                    class="footer__insta"
+                  target="_blank"
+                  href="https://www.instagram.com/namu.museum/" 
+                  class="footer__insta"
                 >
                   <img
                     alt="insta logo"
@@ -547,7 +544,7 @@
           Designed by Zhyriada Marina
         </div>
         <div class="footer__bottom-text">
-          Copyright © 2022. All Rights Reserved.
+          Copyright © 2023. All Rights Reserved.
         </div>
       </div> 
       <div class="container arrow__up">
