fixed landing page

--- a/src/index.html
+++ b/src/index.html
@@ -33,11 +33,14 @@
                МУЗЕЙ
             </h1>
             <div class="tickets grid__item--tablet-1-3 grid__item--desktop-3-5">
-              <a href="https://www.facebook.com/namu.museum" class="tickets__button button"
+              <a
+                href="https://www.facebook.com/namu.museum"
+                class="tickets__button button"
+                target="_blank"
               >
                 <img
                   class="button__arrow"
-                  src="./images/button-arrow.svg"
+                  src="./images/button-arrow-hover.svg"
                   alt="arrow"
                 >
               </a>
@@ -131,7 +134,9 @@
                 <span class="schedule__time">Вихідні:</span>
                 понеділок, вівторок
                 <br>
-                Каса припиняє роботу за 1 годину до закриття музею
+                Каса припиняє роботу за 1 годину до
+                <br>
+                закриття музею
               </p>
             </div>
           </div>
@@ -296,13 +301,13 @@
               <a
                 href="https://ru-ru.facebook.com/namu.museum/"
                 target="_blank"
-                class="footer__icon icon--facebook"
+                class="footer__facebook"
               >
               </a>
               <a
                 href="https://www.instagram.com/namu.museum/"
                 target="_blank"
-                class="footer__icon icon--instagram"
+                class="footer__instagram"
               >
               </a>
             </div>
